Provide a method on SplunkRum for integrating with Browser RUM javascript (#158)
* Provide a method on SplunkRum for integrating with Browser RUM javascript

* Add a note about API instability.

--- a/sample-app/src/main/assets/second.html
+++ b/sample-app/src/main/assets/second.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="/assets/stylesheet.css">
 </head>
 <body>
-<p>This file was loaded from in-app content</p>
-<input type="button" value="Say hello" onClick="showAndroidToast('Hello Android!')"/>
+<p>This file was <b>also</b> loaded from in-app content</p>
+<input type="button" value="Say goodbye" onClick="showAndroidToast('Goodbye Android!')"/>
 
 <p>Session ID: <span id="session_id"></span></p>
 
@@ -17,11 +17,11 @@
     }
 
     document.getElementById("session_id").innerHTML = SplunkRumNative.getNativeSessionId();
+
 </script>
 
 <p>
-    <a href="https://appassets.androidplatform.net/assets/second.html">Next Web Page</a>
+    <a href="https://appassets.androidplatform.net/assets/index.html">Back</a>
 </p>
-
 </body>
 </html>
